--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack src/js/app.js dist/bundle.js",
-    "build:prod": "webpack src/js/app.js dist/bundle.js -p"
+    "build": "webpack-dev-server",
+    "build:prod": "webpack -p"
   },
   "devDependencies": {
-    "webpack": "^2.2.1"
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.9.7"
   }
 }
