--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "build:prod": "webpack -p"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "css-loader": "^0.26.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
+
   }
 }
